deploy/kustomize/ingress/traefik/mda-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-imap
  labels:
    app.kubernetes.io/name: mda
    app.kubernetes.io/component: mail
    app.kubernetes.io/part-of: docker-mailserver
spec:
  entryPoints:
    - imap
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mda
          port: imap
          nativeLB: true
          serversTransport: proxyprotocol
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-imaps
  labels:
    app.kubernetes.io/name: mda
    app.kubernetes.io/component: mail
    app.kubernetes.io/part-of: docker-mailserver
spec:
  entryPoints:
    - imaps
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mda
          port: imaps
          nativeLB: true
          serversTransport: proxyprotocol
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-pop3
  labels:
    app.kubernetes.io/name: mda
    app.kubernetes.io/component: mail
    app.kubernetes.io/part-of: docker-mailserver
spec:
  entryPoints:
    - pop3
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mda
          port: pop3
          nativeLB: true
          serversTransport: proxyprotocol
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-pop3s
  labels:
    app.kubernetes.io/name: mda
    app.kubernetes.io/component: mail
    app.kubernetes.io/part-of: docker-mailserver
spec:
  entryPoints:
    - pop3s
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mda
          port: pop3s
          nativeLB: true
          serversTransport: proxyprotocol
